--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,12 @@
 <body>
     <h1>blog</h1>
     <form action="addblogs" method="post" >
-        <label for="author">Author</label>
-        <input type="text" name="author" id="author"><br></br>
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name"><br></br>
 
 
-        <label for="category">Category:-</label>
-        <input type="text" name="category" id="category"><br></br>
+        <label for="Class">Class:-</label>
+        <input type="text" name="Class" id="Class"><br></br>
 
 
         <label for="blog">Blog:-</label>
